--- a/call-processing-service/app/src/main/resources/application.properties
+++ b/call-processing-service/app/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=processing-service
+server.address=0.0.0.0
 server.port=8083
+# Enable Prometheus metrics export
+management.endpoints.web.exposure.include=health,info,prometheus
 
-# spring.kafka.bootstrap-servers=host.docker.internal:19092,host.docker.internal:19093
-# spring.kafka.streams.bootstrap-servers=host.docker.internal:19092,host.docker.internal:19093
-# Kafka Streams config
-# spring.kafka.streams.application-id=call-app
-# spring.kafka.streams.bootstrap-servers=172.17.0.1:9092
-# spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
-# spring.kafka.streams.properties.default.value.serde=call.processing.app.config.GsonSerde
-# spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+# Prometheus endpoint
+management.endpoint.prometheus.access=UNRESTRICTED
+
+# Actuator base path
+management.endpoints.web.base-path=/actuator
