feat(services): complete basic ci/cd to aws ecr

--- a/call-processing-service/app/src/main/resources/application.properties
+++ b/call-processing-service/app/src/main/resources/application.properties
@@ -8,3 +8,6 @@ management.endpoint.prometheus.access=UNRESTRICTED
 
 # Actuator base path
 management.endpoints.web.base-path=/actuator
+
+# Environment variables
+kafka.broker.address=default
